--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ body {
     display: flex;
     justify-content: space-between;
     color: #666;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 .answers-container {
